# empowerchain

./: .earthlyignore  .gentx-themiss.json  .gitignore  AlexIT  CLI Task.md  CLI.md  Earthfile  Empower IBC task.md  Empower dilsinay  GENTX bibommo  IBC-tasks  Makefile  README.md  Tarzik gentx  codecov.yml  config.yml  dmvrt.json  fastintop.json  gentx-0xKnowledgE.json  gentx-0xdirosaValidator.json  gentx-Ahverdil.json  gentx-BTS.json  gentx-Cakooooo.json  gentx-Coinstamp.json  gentx-CryptoFather.json  gentx-DOUBLELIFT.json  gentx-Duman.json  gentx-EBUNODE.json  gentx-ERDEM.json  gentx-Etokura.json  gentx-FLECHEMANO.json  gentx-FendeR.json  gentx-ForTheEmperor.json  gentx-HakaNode.json  gentx-Iso_dayI.json  gentx-KolayPara.json  gentx-Mucoali.json  gentx-NodesWizard.json  gentx-OGMAKAVELI.json  gentx-Ogempower.json  (+61 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
app/: app.go  export.go  simulation_test.go
chain/: .gitignore  .golangci.yml  CHANGELOG.md  CODING_GUIDELINES.md  Dockerfile  Earthfile  Makefile  README.md  go.mod  go.sum  package-lock.json
cosmwasm/: .earthlyignore  .gitignore  CODING_GUIDELINES.md  Cargo.toml  Earthfile  README.md
cosmwasm/.cargo/: config
cosmwasm/contracts/plastic-credit-marketplace/: Cargo.toml  README.md
cosmwasm/contracts/plastic-credit-marketplace/src/: error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
cosmwasm/contracts/plastic_credit_marketplace/: Cargo.toml
cosmwasm/contracts/plastic_credit_marketplace/src/: lib.rs
cosmwasm/schema/: plastic-credit-marketplace.json
cosmwasm/scripts/tscodegen/: index.js  package-lock.json  package.json
docker/: Dockerfile  empower-setup.sh
docs/: .gitignore  Earthfile  From zero to hero validator guide  From zero to hero validator guide.md  Proof of existence user guide  Proof_of_existence_user_guide.md  README.md  empowerMarket_user_guide.md  ibc_testing_guide.md  index.md  package-lock.json  package.json
frontend/: .gitignore  Earthfile  README.md  lerna.json  package-lock.json  package.json
igniter/: go.mod  go.sum  readme.md
indexer/: .gitignore  LICENSE  README.md  collection-example.json  docker-compose.yml  package.json  project.yaml  schema.graphql  (+1 more)
(+3232 files in other folders)
